--- a/homed-zigbee/config.json
+++ b/homed-zigbee/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "HOMEd Zigbee Test",
+  "name": "HOMEd Zigbee",
   "version": "3.4.4",
   "url": "https://github.com/DivanX10/Home-Assistant-Add-on-Homed",
   "slug": "homedzigbee",
